# simplicity

./: .gitignore  README.md  main.py  model.py  pyproject.toml
data/cities/: cities.json
